@@ -56,10 +56,6 @@ Colors used:
   font-weight: bold;
 }
 
-.forum-statistics-sub-body {
-  padding-left: 15px;
-}
-
 /*** FORUM THREADS ***********************************************************/
 
 .forum-post {
