@@ -82,7 +82,6 @@ Colors used:
 .forum-statistics-sub-body {
   background-color: #EDF5FA;
   color: #494949;
-  padding-left: 2em;
 }
 
 /*** FORUM THREADS ***********************************************************/
